SAK-17770
git-svn-id: https://source.sakaiproject.org/svn/content/trunk@72372 66ffb92e-73f9-0310-93c1-f5514f145a0a